clusters/home/apps/podinfo/podinfo/configs/podinfo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-ingressroute
  namespace: podinfo
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    gethomepage.dev/href: "https://podinfo.homelab.rivetcode.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Podinfo
    gethomepage.dev/group: Kubernetes
    gethomepage.dev/icon: podinfo.png
    gethomepage.dev/app: podinfo # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: Podinfo
    gethomepage.dev/widget.type: "podinfo"
    gethomepage.dev/widget.url: "https://podinfo.homelab.rivetcode.com"
    gethomepage.dev/pod-selector: ""
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`podinfo.homelab.rivetcode.com`)
    kind: Rule
    services:
    - name: podinfo
      port: 80
  tls:
    secretName: podinfo-certificate-secret
